--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import 'tailwindcss';
 
 @theme  {
-  --color-primary: #0F1C0B;
+  /*--color-primary: #0F1C0B;*/
+  --color-primary: #0b2112;
+  --color-secondary: #c4b6d9;
+  --default-font-family: 'Rounded Elegance', sans-serif;
+  --secondary-font-family: 'calibri', sans-serif;
 }
