Cambios import React

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: 'Rounded Elegance';
-  src: url('/fonts/RoundedElegance.ttf') format('truetype');
+  src: url('/fonts/RoundedElegance.otf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
